# NatoSpellBot

./: Procfile  README.md  natoSpellBot.py  pyproject.toml  requirements.txt
data/: natoalphabet.json
