[tool.poetry]
name = "nanospellbot"
version = "0.1.0"
description = ""
authors = ["Jessica Walkenhorst"]

[tool.black]
line-length = 100

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.4.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^3.9.1"
python-dotenv = "^0.17.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
